exports[`createToteutus > should be able to create ammatillinen tutkinnon osa toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": {
      "alkaa": "2050-04-01T00:00",
      "paattyy": "2050-09-01T00:00"
    },
    "hakulomakeLinkki": {
      "fi": "http://example.com"
    },
    "hakulomaketyyppi": "muu",
    "hakutermi": "hakeutuminen",
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {
      "fi": "<p>lisätiedot</p>"
    },
    "lisatietoaValintaperusteista": {
      "fi": "<p>lisätiedot valintaperusteista</p>"
    },
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "amm-tutkinnon-osa",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Kaivosalan perustutkinto"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create ammatillinen toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [
      {
        "arvo": "ammattinimike",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [
      {
        "koodiUri": "osaamisala_1800",
        "linkki": {
          "fi": "http://linkki.com"
        },
        "otsikko": {
          "fi": "osaamisala_0 otsikko"
        }
      }
    ],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "amm",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Kaivosalan perustutkinto"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create korkeakoulu toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [
      {
        "arvo": "ammattinimike",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": {
        "kuvaus": {
          "fi": "<p>apuraha kuvaus</p>"
        },
        "max": 20,
        "min": 20,
        "yksikko": "euro"
      },
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "lukuvuosimaksu",
      "maksunMaara": 10,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2",
        "oppilaitoksenopetuskieli_4#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "yo",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "toteutuksen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create lukio toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [
      {
        "koodiUri": "moduulikoodistolops2021_kald3#1",
        "linkinAltTeksti": {
          "fi": "Käsityön diplomin lisätietoja"
        },
        "linkki": {
          "fi": "http://example.com"
        }
      },
      {
        "koodiUri": "moduulikoodistolops2021_tald7#1",
        "linkinAltTeksti": {},
        "linkki": {}
      }
    ],
    "erityisetKoulutustehtavat": [
      {
        "koodiUri": "lukiolinjaterityinenkoulutustehtava_0100#1",
        "kuvaus": {
          "fi": "<p>IB-linja erityistehtävä kuvaus</p>"
        }
      },
      {
        "koodiUri": "lukiolinjaterityinenkoulutustehtava_0121#1",
        "kuvaus": {
          "fi": "<p>ICT-linja erityistehtävä kuvaus</p>"
        }
      }
    ],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hasJotpaRahoitus": true,
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [
        "kieli_en#1"
      ],
      "A2Kielet": [
        "kieli_en#1"
      ],
      "B1Kielet": [
        "kieli_sv#1"
      ],
      "B2Kielet": [
        "kieli_de#1"
      ],
      "B3Kielet": [
        "kieli_es#1"
      ],
      "aidinkielet": [
        "kieli_fi#1"
      ],
      "muutKielet": [
        "kieli_zh#1"
      ]
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [
      {
        "koodiUri": "lukiopainotukset_0100#1",
        "kuvaus": {
          "fi": "<p>IB-linja painotus kuvaus</p>"
        }
      },
      {
        "koodiUri": "lukiopainotukset_0121#1",
        "kuvaus": {
          "fi": "<p>ICT-linja painotus kuvaus</p>"
        }
      }
    ],
    "toteutusjaksot": [],
    "tyyppi": "lk",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ],
    "yleislinja": true
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {},
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editToteutus > should be able to edit ammatillinen toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [
      {
        "koodiUri": "osaamisala_0",
        "linkki": {
          "fi": "https://www.salpaus.fi/koulutusesittely/elaintenhoitaja/"
        },
        "otsikko": {
          "fi": "Otsikko"
        }
      }
    ],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "amm",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editToteutus > should be able to edit korkeakoulu toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "yo",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editToteutus > should be able to edit lukio toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [
        "kieli_en#1"
      ],
      "A2Kielet": [
        "kieli_sv#1"
      ],
      "B1Kielet": [
        "kieli_en#1"
      ],
      "B2Kielet": [
        "kieli_en#1"
      ],
      "B3Kielet": [
        "kieli_sv#1"
      ],
      "aidinkielet": [
        "kieli_de#1"
      ],
      "muutKielet": [
        "kieli_de#1"
      ]
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "lk",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ],
    "yleislinja": true
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editToteutus > should be able to edit tutkinnon osa toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hakulomaketyyppi": "ei sähköistä",
    "hakutermi": "hakeutuminen",
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [
      {
        "koodiUri": "osaamisala_0",
        "linkki": {
          "fi": "https://www.salpaus.fi/koulutusesittely/elaintenhoitaja/"
        },
        "otsikko": {
          "fi": "Otsikko"
        }
      }
    ],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "amm-tutkinnon-osa",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`createToteutus > should be able to create TUVA toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": 25,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "tuva",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Tutkintokoulutukseen valmentava koulutus (TUVA)"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editToteutus > should be able to edit tuva toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "tuva",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`createToteutus > should be able to create TELMA toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": 25,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "telma",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Työhön ja itsenäiseen elämään valmentava koulutus (TELMA)"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editToteutus > should be able to edit telma toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "telma",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`createToteutus > should be able to create "Vapaa Sivistystyö - Muu" toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": {
      "alkaa": "2050-04-01T00:00",
      "paattyy": "2050-09-01T00:00"
    },
    "hakulomakeLinkki": {
      "fi": "http://example.com"
    },
    "hakulomaketyyppi": "muu",
    "hakutermi": "hakeutuminen",
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {
      "fi": "<p>lisätiedot</p>"
    },
    "lisatietoaValintaperusteista": {
      "fi": "<p>lisätiedot valintaperusteista</p>"
    },
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "vapaa-sivistystyo-muu",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Vapaa Sivistystyö Opistovuosi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create "Vapaa Sivistystyö  - Opistovuosi" toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "vapaa-sivistystyo-opistovuosi",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Vapaa Sivistystyö Opistovuosi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editToteutus > should be able to delete toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [
      {
        "koodiUri": "osaamisala_0",
        "linkki": {
          "fi": "https://www.salpaus.fi/koulutusesittely/elaintenhoitaja/"
        },
        "otsikko": {
          "fi": "Otsikko"
        }
      }
    ],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "amm",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "poistettu"
};

exports[`createToteutus > should be able to create amm. ope-, erityisope ja opototeutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [
      {
        "arvo": "ammattinimike",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": {
        "kuvaus": {
          "fi": "<p>apuraha kuvaus</p>"
        },
        "max": 20,
        "min": 20,
        "yksikko": "euro"
      },
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "lukuvuosimaksu",
      "maksunMaara": 10,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2",
        "oppilaitoksenopetuskieli_4#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "yo",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "toteutuksen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create amm. ope-, erityisope- ja opokoulutuksen toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [
      {
        "arvo": "ammattinimike",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": {
        "kuvaus": {
          "fi": "<p>apuraha kuvaus</p>"
        },
        "max": 20,
        "min": 20,
        "yksikko": "euro"
      },
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "lukuvuosimaksu",
      "maksunMaara": 10,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2",
        "oppilaitoksenopetuskieli_4#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "amm-ope-erityisope-ja-opo",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "toteutuksen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create muu ammatillinen toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": {
      "alkaa": "2050-04-01T00:00",
      "paattyy": "2050-09-01T00:00"
    },
    "hakulomakeLinkki": {
      "fi": "http://example.com"
    },
    "hakulomaketyyppi": "muu",
    "hakutermi": "hakeutuminen",
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {
      "fi": "<p>lisätiedot</p>"
    },
    "lisatietoaValintaperusteista": {
      "fi": "<p>lisätiedot valintaperusteista</p>"
    },
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "amm-muu",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Muut ammatilliset koulutukset"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create "Aikuisten perusopetus" -toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": 25,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": {
      "alkaa": "2050-04-01T00:00",
      "paattyy": "2050-09-01T00:00"
    },
    "hakulomakeLinkki": {
      "fi": "http://example.com"
    },
    "hakulomaketyyppi": "muu",
    "hakutermi": "hakeutuminen",
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {
      "fi": "<p>lisätiedot</p>"
    },
    "lisatietoaValintaperusteista": {
      "fi": "<p>lisätiedot valintaperusteista</p>"
    },
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "aikuisten-perusopetus",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Aikuisten perusopetus"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editToteutus > should be able to edit muu ammatillinen toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hakulomaketyyppi": "ataru",
    "hakutermi": "hakeutuminen",
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "amm-muu",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editToteutus > should be able to edit "Aikuisten perusopetus" -toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hakulomaketyyppi": "ataru",
    "hakutermi": "hakeutuminen",
    "hasJotpaRahoitus": false,
    "ilmoittautumislinkki": {},
    "jarjestetaanErityisopetuksena": false,
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {},
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "aikuisten-perusopetus",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`createToteutus > should be able to create korkeakoulutus opintojakso toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": {
      "alkaa": "2050-04-01T00:00",
      "paattyy": "2050-09-01T00:00"
    },
    "hakulomakeLinkki": {
      "fi": "http://example.com"
    },
    "hakulomaketyyppi": "muu",
    "hakutermi": "hakeutuminen",
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {
      "fi": "<p>lisätiedot</p>"
    },
    "lisatietoaValintaperusteista": {
      "fi": "<p>lisätiedot valintaperusteista</p>"
    },
    "opetus": {
      "apuraha": {
        "kuvaus": {
          "fi": "<p>apuraha kuvaus</p>"
        },
        "max": 20,
        "min": 20,
        "yksikko": "euro"
      },
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "lukuvuosimaksu",
      "maksunMaara": 10,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2",
        "oppilaitoksenopetuskieli_4#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "kk-opintojakso",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "toteutuksen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create "DIA" -toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [
      {
        "koodiUri": "moduulikoodistolops2021_kald3#1",
        "linkinAltTeksti": {
          "fi": "Käsityön diplomin lisätietoja"
        },
        "linkki": {
          "fi": "http://example.com"
        }
      },
      {
        "koodiUri": "moduulikoodistolops2021_tald7#1",
        "linkinAltTeksti": {},
        "linkki": {}
      }
    ],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hasJotpaRahoitus": true,
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [
        "kieli_en#1"
      ],
      "A2Kielet": [
        "kieli_en#1"
      ],
      "B1Kielet": [
        "kieli_sv#1"
      ],
      "B2Kielet": [
        "kieli_de#1"
      ],
      "B3Kielet": [
        "kieli_es#1"
      ],
      "aidinkielet": [
        "kieli_fi#1"
      ],
      "muutKielet": [
        "kieli_zh#1"
      ]
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "lk",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ],
    "yleislinja": true
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Deutsche Internationale Abitur; Reifeprüfung"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create "EB" -toteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": false,
    "diplomit": [
      {
        "koodiUri": "moduulikoodistolops2021_kald3#1",
        "linkinAltTeksti": {
          "fi": "Käsityön diplomin lisätietoja"
        },
        "linkki": {
          "fi": "http://example.com"
        }
      },
      {
        "koodiUri": "moduulikoodistolops2021_tald7#1",
        "linkinAltTeksti": {},
        "linkki": {}
      }
    ],
    "erityisetKoulutustehtavat": [],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [
        "kieli_en#1"
      ],
      "A2Kielet": [
        "kieli_en#1"
      ],
      "B1Kielet": [
        "kieli_sv#1"
      ],
      "B2Kielet": [
        "kieli_de#1"
      ],
      "B3Kielet": [
        "kieli_es#1"
      ],
      "aidinkielet": [
        "kieli_fi#1"
      ],
      "muutKielet": [
        "kieli_zh#1"
      ]
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "opetus": {
      "apuraha": null,
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "lk",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ],
    "yleislinja": true
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "EB-tutkinto (European Baccalaureate)"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create korkeakoulutus opintokokonaisuustoteutus #0`] =
{
  "esikatselu": false,
  "externalId": null,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "avoinKorkeakoulutus": true,
    "diplomit": [],
    "erityisetKoulutustehtavat": [],
    "hakuaika": {
      "alkaa": "2050-04-01T00:00",
      "paattyy": "2050-09-01T00:00"
    },
    "hakulomakeLinkki": {
      "fi": "http://example.com"
    },
    "hakulomaketyyppi": "muu",
    "hakutermi": "hakeutuminen",
    "ilmoittautumislinkki": {},
    "kielivalikoima": {
      "A1Kielet": [],
      "A2Kielet": [],
      "B1Kielet": [],
      "B2Kielet": [],
      "B3Kielet": [],
      "aidinkielet": [],
      "muutKielet": []
    },
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "lisatietoaHakeutumisesta": {
      "fi": "<p>lisätiedot</p>"
    },
    "lisatietoaValintaperusteista": {
      "fi": "<p>lisätiedot valintaperusteista</p>"
    },
    "opetus": {
      "apuraha": {
        "kuvaus": {
          "fi": "<p>apuraha kuvaus</p>"
        },
        "max": 20,
        "min": 20,
        "yksikko": "euro"
      },
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "lukuvuosimaksu",
      "maksunMaara": 10,
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#2",
        "oppilaitoksenopetuskieli_4#2"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "opintojenLaajuusNumero": 10,
    "opintojenLaajuusyksikkoKoodiUri": "opintojenlaajuusyksikko_2#1",
    "osaamisalat": [],
    "painotukset": [],
    "toteutusjaksot": [],
    "tyyppi": "kk-opintokokonaisuus",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "toteutuksen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};
